chatbox support auto clear

--- a/src/chatbox/style/index.less
+++ b/src/chatbox/style/index.less
@@ -189,5 +189,6 @@
         line-height: 1;
         cursor: pointer;
         border-radius: @sendRadius*@sizeRatio;
+        background-color: transparent;
     }
 }
