perfect-scrollbar support disabled control

--- a/src/perfectscrollbar/css/style.less
+++ b/src/perfectscrollbar/css/style.less
@@ -22,3 +22,13 @@
 .ps__rail-y{
     z-index: 98765;
 }
+
+
+.ps-scroll-disable{
+    .ps__rail-x{
+        visibility: hidden;
+    }
+    .ps__rail-y{
+        visibility: hidden;
+    }
+}
