--- a/src/scrollbar/scroll.less
+++ b/src/scrollbar/scroll.less
@@ -38,7 +38,7 @@
     &:hover{
         height: 11px!important;
         .rs__thumb-x{
-            width: 11px!important;
+            height: 11px!important;
             background-color: #999;
         }
     }
