--- a/src/scrollbar/scroll.less
+++ b/src/scrollbar/scroll.less
@@ -25,10 +25,19 @@
     background-color: transparent;
     opacity: 0.6;
     z-index: 1000;
+    display: none;
     &:hover{
         background-color: #eee;
         opacity: 0.9;
     }
+}
+
+.rs--active-x .rs__rail-x{
+    display: block;
+}
+
+.rs--active-y .rs__rail-y{
+    display: block;
 }
 
 .rs__rail-x{
