--- a/src/scrollbar/scroll.less
+++ b/src/scrollbar/scroll.less
@@ -93,3 +93,15 @@
         background-color: #999;
     }
 }
+
+.rs-hide-x{
+    .rs__rail-x{
+        display: none!important;
+    }
+}
+
+.rs-hide-y{
+    .rs__rail-y{
+        display: none!important;
+    }
+}
