--- a/src/chatbox/style/index.less
+++ b/src/chatbox/style/index.less
@@ -79,6 +79,7 @@
             left: @_left*@sizeRatio;
             background: @emotionBgColor;
             box-sizing: content-box;
+            z-index: 100;
             &-packs{
                 position: absolute;
                 bottom: 0;
